--- a/templates/default/log4j.properties.erb
+++ b/templates/default/log4j.properties.erb
@@ -30,11 +30,11 @@ log4j.additivity.com.dtolabs.rundeck.data.jobs.changes=false
 #log4j.additivity.org.hibernate=false
 
 # Enable this logger to see what Spring does, occasionally useful
-#log4j.logger.org.springframework=info,stdout 
+#log4j.logger.org.springframework=info,stdout
 #log4j.additivity.org.springframework=false
 
 # This logger covers all of Grails' internals
-# Enable to see whats going on underneath. 
+# Enable to see whats going on underneath.
 log4j.logger.org.codehaus.groovy.grails=warn,stdout, server-logger
 log4j.additivity.org.codehaus.groovy.grails=false
 
@@ -42,15 +42,15 @@ log4j.additivity.org.codehaus.groovy.grails=false
 # configures with Spring at runtime. Setting to debug will show
 # each bean that is configured
 log4j.logger.org.codehaus.groovy.grails.commons.spring=warn,stdout, server-logger
-log4j.additivity.org.codehaus.groovy.grails.commons.spring=false  
-                          
+log4j.additivity.org.codehaus.groovy.grails.commons.spring=false
+
 # Interesting Logger to see what some of the Grails factory beans are doing
 log4j.logger.org.codehaus.groovy.grails.beans.factory=warn,stdout, server-logger
 log4j.additivity.org.codehaus.groovy.grails.beans.factory=false
 
 # This logger is for Grails' public APIs within the grails. package
 log4j.logger.grails=info,stdout, server-logger
-log4j.additivity.grails=false        
+log4j.additivity.grails=false
 
 
 ####################################################################################################
@@ -72,7 +72,7 @@ log4j.appender.stdout.layout.ConversionPattern=%-5p %c{1}: %m%n
 # Output of the RunDeck command line utilities
 #
 log4j.appender.cmd-logger=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.cmd-logger.file=/var/log/rundeck/command.log
+log4j.appender.cmd-logger.file=<%= @new_resource.log_path %>/command.log
 log4j.appender.cmd-logger.datePattern='.'yyyy-MM-dd
 log4j.appender.cmd-logger.append=true
 log4j.appender.cmd-logger.layout=org.apache.log4j.PatternLayout
@@ -80,23 +80,23 @@ log4j.appender.cmd-logger.layout.ConversionPattern=%d{ISO8601} [%t] %-5p %c - %m
 
 #
 # server-logger - DailyRollingFileAppender
-# 
+#
 # Captures all output from the rundeckd server.
 #
 log4j.appender.server-logger=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.server-logger.file=/var/log/rundeck/rundeck.log
+log4j.appender.server-logger.file=<%= @new_resource.log_path %>/rundeck.log
 log4j.appender.server-logger.datePattern='.'yyyy-MM-dd
 log4j.appender.server-logger.append=true
 log4j.appender.server-logger.layout=org.apache.log4j.PatternLayout
 log4j.appender.server-logger.layout.ConversionPattern=%d{ISO8601} [%t] %-5p %c - %m%n
 
 #
-# audit 
-# 
+# audit
+#
 # Captures all audit events.
 #
 log4j.appender.audit=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.audit.file=/var/log/rundeck/rundeck.audit.log
+log4j.appender.audit.file=<%= @new_resource.log_path %>/rundeck.audit.log
 log4j.appender.audit.append=true
 log4j.appender.audit.layout=org.apache.log4j.PatternLayout
 log4j.appender.audit.layout.ConversionPattern=%d{ISO8601} - %m%n
@@ -107,7 +107,7 @@ log4j.appender.audit.layout.ConversionPattern=%d{ISO8601} - %m%n
 # Logs remote HTTP requests for Options JSON data
 #
 log4j.appender.options=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.options.file=/var/log/rundeck/rundeck.options.log
+log4j.appender.options.file=<%= @new_resource.log_path %>/rundeck.options.log
 log4j.appender.options.append=true
 log4j.appender.options.layout=org.apache.log4j.PatternLayout
 log4j.appender.options.layout.ConversionPattern=[%d{ISO8601}] %X{httpStatusCode} %X{contentLength}B %X{durationTime}ms %X{lastModifiedDateTime} [%X{jobName}] %X{url} %X{contentSHA1}%n
@@ -118,7 +118,7 @@ log4j.appender.options.layout.ConversionPattern=[%d{ISO8601}] %X{httpStatusCode}
 # Logs all Job definition changes
 #
 log4j.appender.jobchanges=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.jobchanges.file=/var/log/rundeck/rundeck.jobs.log
+log4j.appender.jobchanges.file=<%= @new_resource.log_path %>/rundeck.jobs.log
 log4j.appender.jobchanges.append=true
 log4j.appender.jobchanges.layout=org.apache.log4j.PatternLayout
 log4j.appender.jobchanges.layout.ConversionPattern=[%d{ISO8601}] %X{user} %X{change} [%X{id}] %X{project} "%X{groupPath}/%X{jobName}" (%X{method})%n
