--- a/templates/default/jaas-loginmodule.conf.erb
+++ b/templates/default/jaas-loginmodule.conf.erb
@@ -1,5 +1,5 @@
-RDpropertyfilelogin {
-  org.mortbay.jetty.plus.jaas.spi.PropertyFileLoginModule required
+rundecklogin {
+  org.eclipse.jetty.plus.jaas.spi.PropertyFileLoginModule required
   debug="true"
   file="<%= ::File.join(@new_resource.config_path, 'realm.properties') %>";
 };
