--- a/templates/default/profile.erb
+++ b/templates/default/profile.erb
@@ -11,7 +11,7 @@ export RDECK_JVM="-Djava.security.auth.login.config=<%= File.join(@new_resource.
   -Drdeck.projects=<%= File.join(@new_resource.path, 'projects') %> \
   -Drdeck.runlogs=<%= @new_resource.log_path %> \
   -Drundeck.config.location=<%= File.join(@new_resource.config_path, 'rundeck-config.properties') %> \
-  -Xmx1024m -Xms256m -server"
+  -Xmx1024m -Xms256m -server <%= @new_resource.jvm_options %>"
 
 # Is this even used?
 export RDECK_SSL_OPTS="-Djavax.net.ssl.trustStore=$RDECK_BASE/ssl/truststore -Djavax.net.ssl.trustStoreType=jks -Djava.protocol.handler.pkgs=com.sun.net.ssl.internal.www.protocol"
