--- a/templates/default/framework.properties.erb
+++ b/templates/default/framework.properties.erb
@@ -34,8 +34,10 @@ framework.libext.dir = <%= ::File.join(@new_resource.path, 'libext') %>
 # SSH defaults for node executor and file copier
 # ----------------------------------------------------------------
 
+<%- if @new_resource.ssh_key %>
 framework.ssh.keypath = <%= ::File.join(@new_resource.path, '.ssh', 'id_rsa') %>
-framework.ssh.user = rundeck
+framework.ssh.user = <%= new_resource.ssh_user %>
+<%- end -%>
 
 # ssh connection timeout after a specified number of milliseconds.
 # "0" value means wait forever.
