allow variables to be passed into template

--- a/test/cookbooks/rundeck_test/templates/default/job-one.yml.erb
+++ b/test/cookbooks/rundeck_test/templates/default/job-one.yml.erb
@@ -12,8 +12,8 @@
     keepgoing: false
     strategy: node-first
     commands:
-    - exec: echo hello world
-  description: Foo bar
+    - exec: <%= @new_resource.variables[:command] %>
+  description: <%= @new_resource.variables[:description] %>
   nodefilters:
     dispatch:
       threadcount: 1
