allow configuring the user that rundeck will run as remotely

--- a/templates/default/resources.xml.erb
+++ b/templates/default/resources.xml.erb
@@ -9,7 +9,7 @@
         osFamily="<%= n['os'] %>"
         osName="<%= n['kernel_name'] %>"
         osVersion="<%= n['kernel_release'] %>"
-        username="rundeck"
+        username="<%= @new_resource.username %>"
         />
   <%- end -%>
 </project>
