--- a/templates/default/rundeck-config.properties.erb
+++ b/templates/default/rundeck-config.properties.erb
@@ -5,6 +5,6 @@ rdeck.base = <%= @new_resource.path %>
 #rss.enabled if set to true enables RSS feeds that are public (non-authenticated)
 rss.enabled = false
 # change hostname here
-grails.serverURL = http://localhost:4440
+grails.serverURL = <%= @new_resource.proxy_scheme %>://<%= @new_resource.proxy_host %>:<%= @new_resource.proxy_port %>
 dataSource.dbCreate = update
 dataSource.url = jdbc:h2:file:<%= ::File.join(@new_resource.path, 'data', 'rundeckdb') %>;MVCC=true
