Some more tests for cron stuffs.

--- a/test/cookbooks/rundeck_test/templates/default/job-one.yml.erb
+++ b/test/cookbooks/rundeck_test/templates/default/job-one.yml.erb
@@ -1,13 +1,4 @@
-- schedule:
-    time:
-      hour: '22'
-      minute: '0'
-      seconds: '0'
-    month: '*'
-    year: '*'
-    weekday:
-      day: '*'
-  loglevel: INFO
+- loglevel: INFO
   sequence:
     keepgoing: false
     strategy: node-first
